--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
   background-image: url(https://as.com/epik/imagenes/2018/08/22/portada/1534933103_830424_1534933353_noticia_normal.jpg);
    background-repeat: no-repeat;
+	background-size: auto;
 	}
 
 h2 {
