--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
-  background-image: url(https://vignette.wikia.nocookie.net/tortugasninja/images/0/0a/Donatello_TMNT_2007.png/revision/latest?cb=20140417195533&path-prefix=es);
+   background-color: rgb(201, 76, 76);
+	background-image: url(https://vignette.wikia.nocookie.net/tortugasninja/images/0/0a/Donatello_TMNT_2007.png/revision/latest?cb=20140417195533&path-prefix=es);
    background-repeat: no-repeat;
     background-position: right top;
   margin-right: 200px;
