--- a/turismo/index.css
+++ b/turismo/index.css
@@ -1,6 +1,6 @@
 body {
  
-	background-image: url("https://images.genius.com/d0bc88e39fc7bedd05a4a8079445a357.1000x1000x1.jpg");
+	background-image: url("bandana.jpeg");
   	}
 
 h2 {
